This API was not designed for OpenGL 3d textures

--- a/VR_v2/app/src/main/res/layout/common_ui.xml
+++ b/VR_v2/app/src/main/res/layout/common_ui.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ui_layout"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,7 +11,12 @@
         android:id="@+id/gvr_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
+
+    <FrameLayout
+        android:id="@+id/subscriber_container"
+        android:layout_width="1px"
+        android:layout_height="1px"/>
 
 </RelativeLayout>
